[package]
name = "migrate-mongo"
version = "0.1.0"
authors = ["Nathan A Sculli <nathan@vegasbuckeye.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde_dhall"]

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = [ "serde" ] }
env_logger = "0.7"
log = "0.4"
mongodb = "1.1.0"
serde = "1.0"
serde_dhall = { version = "0.6", optional = true }
serde_json = "1.0"
sha2 = "0.9"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
